--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,38 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Node dependencies
+node_modules/
+
+# Build output
+dist/
+
+# Vite cache
+.vite/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.vscode/
+.idea/
+
+# OS-specific files (Linux)
+*~
+
+# Other system-generated files
+.DS_Store  # macOS (safe to leave in, in case you collaborate with Mac users)
+Thumbs.db  # Windows
+
+# Optional: local test coverage output
+coverage/
+
